fixed home logo on mobile view

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -27,6 +27,7 @@
         line-height: 70px;
         color: white;
         text-decoration: none;
+
         &:hover {
             background-color: rgba(255, 255, 255, 0.2);
             transition: ease-in 0.2s;
@@ -56,8 +57,8 @@
         width: 80%;
     }
 
-    .login-link{
-      cursor: pointer;
+    .login-link {
+        cursor: pointer;
     }
 
 
@@ -74,6 +75,12 @@
         display: none;
         z-index: 101;
         margin-right: 20px;
+    }
+
+    .cross-icon {
+        position: absolute;
+        right: 0;
+        top: 20px;
     }
 
     .nav-left {
@@ -109,6 +116,7 @@
             line-height: 50px;
         }
     }
+
     .active {
         background-color: rgba(255, 255, 255, 0.3);
     }
